# nyx-d2r

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.bat  update.bat
Docs/: README.md  WIKI.md
certs/: d2r.cer  d2r.pfx  d2r.pvk
docs/ai-instructions/: usage.md
lib/: d2r.js
lib/d2r/: debug-panel.js  drlg-act.js  game-object.js  item.js  missile.js  models.js  monster.js  object-manager.js  player.js  room-tile.js  seed.js  types.js  unit.js  world-object.js
scripts/d2r-demo/: exit-markers.js  index.js  logging.json  markers.js  package.json  tsconfig.json
scripts/d2r-demo/data/: level-adjacency.js  level-names.js  next-exits.js  poi-constants.js
scripts/d2r-demo/detection/: border-detector.js  poi-builder.js  room2-walker.js  tile-exit-reader.js
scripts/d2r-demo/lib/: diagnostic-logger.js  level-address.js  logging-config.js  memory-helpers.js
scripts/d2r-demo/rendering/: poi-renderer.js
scripts/nyx-plugins/: auto-pot.js  auto-tele.js  help.js  index.js  maphack.js  package.json  plugin-manager.js  zone-exits.js
src/: d2r_automap.h  d2r_binding.cc  d2r_binding.h  d2r_game.cc  d2r_game.h  d2r_methods.cc  d2r_methods.h  d2r_player_id.cc  d2r_player_id.h  d2r_reveal.cc  d2r_reveal.h  d2r_safety.cc  d2r_safety.h  d2r_structs.h  d2r_templates.h  d2r_widget.h  decryption_stub.asm  main.cc  offsets.cc  offsets.h  retcheck_bypass-inl.h  retcheck_bypass.cc  retcheck_bypass.h
tools/: CMakeLists.txt  simple_injector.cc
typings/: d2r-bindings.d.ts
typings/d2r/: debug-panel.d.ts  drlg-act.d.ts  game-object.d.ts  index.d.ts  item.d.ts  missile.d.ts  models.d.ts  monster.d.ts  object-manager.d.ts  player.d.ts  room-tile.d.ts  seed.d.ts  types.d.ts  unit.d.ts
